1. Collection API Улучшения [#211553]